--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,5 +12,5 @@ License: GPL
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
-Imports: sp, data.table, MASS
+Imports: sp, MASS
 Depends: R (>= 2.10)
